@@ -1,1 +1,1 @@
-1.8.21.0-rc2
+1.8.21.0
